[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/proto/boid/BoidBrain.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="BoidBrain" type="Node2D"]
script = ExtResource( 1 )

[node name="FlockArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="FlockDetect" type="CollisionShape2D" parent="FlockArea"]
shape = SubResource( 1 )

[node name="DangerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DangerDetect" type="CollisionShape2D" parent="DangerArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="FlockArea" to="." method="_on_FlockArea_body_entered"]
[connection signal="body_exited" from="FlockArea" to="." method="_on_FlockArea_body_exited"]
[connection signal="body_entered" from="DangerArea" to="." method="_on_DangerArea_body_entered"]
[connection signal="body_exited" from="DangerArea" to="." method="_on_DangerArea_body_exited"]
